Spec WS-E: @pin source-verify cleanup — Ch19/20/22 (smells + concurrency)
source-verifier on Ch19 (smells), Ch20 (thread-safety/JMM), Ch22 (virtual
threads) vs corrected SOURCE-PIN + green modules. Resolved confirmable markers
(JEPs, error_prone_annotations GAV, EI_EXPOSE_REP empirical, virtual-threads-GA
facts); kept genuinely-unverifiable ones flagged (JLS §17 text, JCIP/Fowler
verbatims, SaaS rule defaults, jcstress version, true AHEAD-OF-PIN:
StructuredTaskScope/scoped-values/Valhalla).

Fixed stale "EXAMPLE-BUILD = PENDING-RUNTIME / pending JDK" headers in all 3
(contradicted the green builds + their own back-matter). New flags: ch20 engine-
vs-pin, ch22 quoted-spans-verbatim (a LEGAL-IP finding: a few >15-word quotes +
JEP 444 over-quoted, for the editor). check_snippets PASS (4/5/7); drift clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Vn3iMLjGTQuUJJBaz5q8yp